Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7335

explorer: folder windows don't work unless __MINGW32__ defined

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • None

    Description

      Explorer has lots of #ifndef _MINGW32_ code due to SHCreateShellFolderView missing.
      (comment: IShellFolderViewCB missing in MinGW (as of 25.09.2005))

      I'm changing this to apply to our MSVC build too so folder windows work.
      The real fix is of course to implement SHCreateShellFolderView and remove all those ifdefs.

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              ThFabba ThFabba
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: