[EXPLORER] - Remove no longer needed special casing for __MINGW32__. Patch by Ivan Rodionov. CORE-7335 #resolve #comment Thanks! Committed in r60733.

svn path=/trunk/; revision=60733